[metadata]
name = flask-app
description = flask Application

[options]
packages = 
    app
install_requires =
    flask
    requests
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
app = py.typed

[flake8]
max-line-length = 160